--- a/packages/pentatrion-design/components/resize-area/ResizeArea.scss
+++ b/packages/pentatrion-design/components/resize-area/ResizeArea.scss
@@ -21,7 +21,7 @@
         }
 
         &:hover::before {
-            background-color: var(--background-invert);
+            background-color: var(--color-gray-3);
         }
     }
 
