--- a/packages/pentatrion-design/components/code/Code.scss
+++ b/packages/pentatrion-design/components/code/Code.scss
@@ -1,6 +1,6 @@
 .ll-code {
-    border: 1px solid var(--border-default);
-    background-color: var(--background-gray);
+    border: 1px solid rgb(var(--color-gray-3));
+    background-color: rgb(var(--color-gray-2));
     padding: 0 .25rem;
     border-radius: var(--border-radius);
     line-height: calc(1.5rem - 1px);
