--- a/packages/pentatrion-design/components/input/Checkbox-Radio.scss
+++ b/packages/pentatrion-design/components/input/Checkbox-Radio.scss
@@ -26,7 +26,7 @@
     width: 1.25rem;
     color: var(--color-yellow);
     background-color: #fff;
-    outline: 1px solid var(--color-gray-100);
+    outline: 1px solid rgb(var(--color-gray-2));
 
     margin-top: 0;
     margin-bottom: 0;
@@ -39,7 +39,7 @@
     border: 0;
 
     &:hover {
-        outline-color: var(--color-gray-400);
+        outline-color: var(--color-gray-1);
     }
 
     &:checked,
@@ -48,7 +48,7 @@
         background-size: 100% 100%;
         background-position: center;
         background-repeat: no-repeat;
-        outline-color: var(--color-gray-400);
+        outline-color: var(--color-gray-1);
         background-color: currentColor;
     }
 
@@ -58,11 +58,11 @@
     }
 
     &.orange {
-        outline-color: var(--color-orange-600);
+        outline-color: rgb(var(--color-orange-4));
     }
 
     &.error {
-        outline-color: var(--color-red-600);
+        outline-color: rgb(var(--color-red-4));
     }
 
     &.indeterminate,
