--- a/packages/pentatrion-design/components/input/Toggle.scss
+++ b/packages/pentatrion-design/components/input/Toggle.scss
@@ -21,8 +21,8 @@
     display: inline-block;
     position: relative;
     margin: 0 0.25rem 0 0;
-    outline: $form-outline-width solid var(--color-gray-100);
-    background-color: var(--background-light);
+    outline: $form-outline-width solid rgb(var(--color-gray-2));
+    background-color: rgb(var(--color-gray-1));
     cursor: pointer;
     line-height: 18px;
     vertical-align: -25%;
@@ -30,27 +30,27 @@
     transition: border .3s ease, box-shadow .3s ease;
 
     &:hover {
-        outline-color: var(--color-gray-400);
+        outline-color: var(--color-gray-1);
 
         &::after {
-            outline: $form-outline-width solid var(--color-gray-400);
+            outline: $form-outline-width solid var(--color-gray-1);
         }
     }
 
 
     &.orange {
-        outline-color: var(--color-orange-600);
+        outline-color: rgb(var(--color-orange-4));
 
         &::after {
-            outline-color: var(--color-orange-600);
+            outline-color: rgb(var(--color-orange-4));
         }
     }
 
     &.error {
-        outline-color: var(--color-red-600);
+        outline-color: rgb(var(--color-red-4));
 
         &::after {
-            outline-color: var(--color-red-600);
+            outline-color: rgb(var(--color-red-4));
         }
     }
 
@@ -68,13 +68,13 @@
         width: calc(18px - 6px);
         height: calc(18px - 6px);
         border-radius: 50%;
-        background-color: var(--color-gray-200);
+        background-color: rgb(var(--color-gray-3));
         transition: all 0.15s cubic-bezier(0.5, 0.1, 0.75, 1.35);
-        outline: 1px solid var(--color-gray-200);
+        outline: 1px solid rgb(var(--color-gray-3));
     }
 
     &:checked {
-        background-color: var(--color-yellow-100);
+        background-color: var(--color-yellow-300);
         outline-color: var(--color-yellow-500);
 
         &::after {
