--- a/packages/pentatrion-design/components/quick-settings/QuickSettings.scss
+++ b/packages/pentatrion-design/components/quick-settings/QuickSettings.scss
@@ -9,7 +9,7 @@
         justify-content: space-between;
 
         &>:first-child {
-            color: var(--text-hint);
+            color: rgb(var(--color-text-2));
             font-size: var(--font-size-sm);
         }
 
@@ -61,7 +61,7 @@
     }
 
     .separator {
-        background-color: var(--color-gray-50);
+        background-color: rgb(var(--color-gray-1));
         width: 50%;
         height: 4px;
         border-radius: 2px;
@@ -76,6 +76,6 @@
     //     margin-bottom: .5rem;
     //     margin-top: .5rem;
     //     border-radius: var(--border-radius-2xl);
-    //     border: 1px solid var(--color-gray-100);
+    //     border: 1px solid rgb(var(--color-gray-2));
     // }
 }
