tailwind migration fix colors

--- a/packages/pentatrion-design/.storybook/storybook.scss
+++ b/packages/pentatrion-design/.storybook/storybook.scss
@@ -77,5 +77,5 @@
     margin: 1rem;
     padding: 1rem;
     font-size: .9rem;
-    color: rgb(var(--color-text-2));
+    color: rgb(var(--color-neutral-2));
 }
