--- a/packages/pentatrion-design/components/table/Table.scss
+++ b/packages/pentatrion-design/components/table/Table.scss
@@ -47,7 +47,7 @@
             display: block;
             font-weight: var(--font-weight-medium);
             font-size: .9rem;
-            color: rgb(var(--color-text-2));
+            color: rgb(var(--color-neutral-2));
         }
     }
 }
