--- a/packages/pentatrion-design/components/highlight/Highlight.scss
+++ b/packages/pentatrion-design/components/highlight/Highlight.scss
@@ -1,5 +1,5 @@
 .ll-highlight {
-    color: rgb(var(--color-text-2));
+    color: rgb(var(--color-neutral-2));
 
     mark {
         color: var(--text-strong);
