tailwind migration button

--- a/packages/pentatrion-design/components/steps/Steps.scss
+++ b/packages/pentatrion-design/components/steps/Steps.scss
@@ -214,8 +214,7 @@ $circleRadius: 18px;
         flex: 1;
     }
 
-    .ll-button,
-    .ll-button-placeholder {
+    .ll-button {
         margin: 2px 0px 2px .5rem;
     }
 
