--- a/packages/pentatrion-design/components/dialog/Dialog.scss
+++ b/packages/pentatrion-design/components/dialog/Dialog.scss
@@ -180,7 +180,7 @@
         }
 
         &[disabled] {
-            color: rgb(var(--color-neutral-2));
+            color: rgb(var(--color-gray-6));
             pointer-events: none;
         }
 
@@ -201,7 +201,7 @@
         }
 
         &.discret {
-            color: rgb(var(--color-neutral-2));
+            color: rgb(var(--color-gray-6));
 
             .content {
                 font-size: .9rem;
