--- a/packages/pentatrion-design/components/quick-settings/QuickSettings.scss
+++ b/packages/pentatrion-design/components/quick-settings/QuickSettings.scss
@@ -9,7 +9,7 @@
         justify-content: space-between;
 
         &>:first-child {
-            color: rgb(var(--color-neutral-2));
+            color: rgb(var(--color-gray-6));
             font-size: var(--font-size-sm);
         }
 
