--- a/packages/pentatrion-design/components/steps/Steps.scss
+++ b/packages/pentatrion-design/components/steps/Steps.scss
@@ -198,7 +198,7 @@ $circleRadius: 18px;
     }
 
     .handle {
-        color: rgb(var(--color-neutral-2));
+        color: rgb(var(--color-gray-6));
         transition: all ease .3s;
 
         &.active {
